--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height:100%;
+  position:relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.color_red{
+  background-color:rgb(238, 96, 124);
+  width:50%;
+  height: 50vh;
+  margin:0 auto;
+  position: absolute;
+  top:50%;
+  right:270px;
+}
+.color_green{
+  background-color:rgb(132, 235, 132);
+  width:50%;
+  height:50vh;
+  margin:0 auto;
+  position: absolute;
+  top:50%;
+  right:170px;
 }
